You can now close workspaces Opening a file with the same key twice will no longer create duplicate profiles prepareProfiles will no longer skip all other profiles if there is no Default Fixed an issue causing all profiles to be overwritten when creating a workspace The workspace tab bar is now visible even when there are no tabs

--- a/sass/_ui.scss
+++ b/sass/_ui.scss
@@ -96,6 +96,7 @@
 
 .panel-header {
     background: $panel-tab-background-color;
+    height: 23px;
     flex: 0 0 auto;
     display: flex;
     box-shadow: inset 0 1px 0 lighten($panel-tab-background-color, 7.5);
@@ -158,10 +159,6 @@
 
 .workspace-tabs {
     @extend .panel-header;
-
-    &:empty {
-        display: none;
-    }
 }
 
 .workspace-tab {
